--- a/config.yaml
+++ b/config.yaml
@@ -6,11 +6,8 @@ model:
   temperature: 0.0
 
 prompt:
-  template_1: ("Sei un esperto linguista italiano. Traduci da italiano antico a italiano moderno.\n\n" 
-                     "{examples}\n\n" 
-                     "Traduci '{old_sentence}' tenendo conto dei modi di dire e scrivere dei tempi medievali e rinascimentali,"
-                     "scrivimi solo la traduzione senza aggiungere altro."
-                     )
+  template_1: "Sei un esperto linguista italiano. Traduci da italiano antico a italiano moderno.\n\n {examples}\n\n Traduci '{old_sentence}' tenendo conto dei modi di dire e scrivere dei tempi medievali e rinascimentali, scrivimi solo la traduzione senza aggiungere altro."
+                     
 
   template_2: ("You are an expert Italian linguist. Translate from Old Italian to Modern Italian.\n\n" 
                     "{examples}\n\n" 
