--- a/config.yaml
+++ b/config.yaml
@@ -8,11 +8,21 @@ model:
   temperature: 0.0
 
 prompt:
-  template_1: "Sei un esperto linguista italiano. Traduci da italiano antico a italiano moderno.\n\n {examples}\n\n Traduci '{old_sentence}' tenendo conto dei modi di dire e scrivere dei tempi medievali e rinascimentali, scrivimi solo la traduzione senza aggiungere altro."
-                     
+  template_it: >
+    Sei un esperto linguista italiano. Traduci da italiano antico a italiano moderno.
 
-  template_2: "You are an expert Italian linguist. Translate from Old Italian to Modern Italian.\n\n {examples}\n\n Translate '{old_sentence}' taking into account the ways of speaking and writing of the medieval and Renaissance periods, just write me the translation without adding anything else."
-                  
+    {examples}
+
+    Traduci '{old_sentence}' tenendo conto dei modi di dire e scrivere dei tempi medievali e rinascimentali,
+    scrivimi solo la traduzione senza aggiungere altro.
+
+  template_en: >
+    You are an expert Italian linguist. Translate from Old Italian to Modern Italian.
+
+    {examples}
+
+    Translate '{old_sentence}' taking into account the ways of speaking and writing of the medieval and Renaissance periods,
+    just write me the translation without adding anything else.
 
 
 data:
