--- a/config.yaml
+++ b/config.yaml
@@ -39,8 +39,10 @@ prompt:
    Your goal is to decide which translation is better based on the following criteria:
     -Meaning Preservation: the best is a fully faithful to the original meaning translation
     -Grammar: the best is a grammar perfectly fluent and natural in the target Language
-    -Style Matching: the best is that style and register match the source perfectly
-    -Structural Alignment: the best is that mirrors sentence and paragraph structure effectively
+    -Modern Structural Effectiveness: the best is a Fully natural and idiomatic structure; clear, fluent, and appropriate for contemporary Italian.
+    -Completeness: the best is fully complete with no omissions or additions
+    -Lexical Modernization: the best is that Modern terms feel natural, idiomatic, and true to current Italian usage.
+    
 
     Old sentence: {old_sentence}
     Translation A: {A}
@@ -54,41 +56,41 @@ prompt:
   user_template_judge: >
    Evaluate the translation using these five criteria:
    
-   1. Meaning Preservation
+   Meaning Preservation
     1: Completely diverges in meaning, major misinterpretations or hallucinations
     2: Core ideas are misrepresented or lost, with significant meaning shift
     3: Mostly correct meaning, but with noticeable errors (minor shifts or omissions)
     4: Meaning is preserved with minor discrepancies or nuances lost
     5: Fully faithful to the original meaning
 
-    2. Grammar
+   Grammar
     1: Barely readable or nonsensical
     2: Grammatically flawed throughout, affecting understanding
     3: Minor grammatical or syntactic errors, but understandable
     4: Fluent, with native-like grammar and syntax, but minor oddities
     5: Perfectly fluent and natural in the target Language
 
-    3. Style Matching
-    1: Tone and style completely off (e.g. formal for slang)
-    2: Style mismatch that makes the translation jarring
-    3: Mostly consistent style, some mismatches
-    4: Style fits, though with slight inconsistencies in tone
-    5: Style and register match the source perfectly
+    Modern Structural Effectiveness
+    1: Structure is archaic or rigid, hard to follow; mimics original in a way that hinders readability.
+    2: Structure is awkward or overly literal; noticeably unnatural for modern Italian.
+    3: Mixed structure; understandable but includes dated or clumsy phrasing.
+    4: Mostly fluent and modern structure; minor awkwardness or stiffness remains.
+    5: Fully natural and idiomatic structure; clear, fluent, and appropriate for contemporary Italian.
 
-    4. Structural Alignment
-    1: Sentence structure completely changes or collapses
-    2: Structural elements are lost or reordered drastically
-    3: Mostly follows structure, with some reordering or changes
-    4: Retains source structure with minimal deviations
-    5: Mirrors sentence and paragraph structure effectively
-
-    5. Completeness
+    Completeness
     1: Large parts missing or major hallucinated content
     2: Multiple omissions or additions altering meaning
     3: Minor omissions or additions that don’t significantly alter meaning
     4: Nearly complete with only slight trimming
     5: Fully complete with no omissions or additions
 
+    Lexical Modernization
+    1: No modernization; reads like the original.
+    2: Mostly archaic or unnatural word choices.
+    3: Mixture of modern and archaic.
+    4: Slightly dated or formal, but still acceptable in modern Italian.
+    5: Modern terms feel natural, idiomatic, and true to current Italian usage.
+    
     Provide your evaluation in the following format (use only this format, without extra text):
 
     Meaning Preservation: <score>, Grammar: <score>, Style Matching: <score>, Structural Alignment: <score>, Completeness: <score>
