--- a/config.yaml
+++ b/config.yaml
@@ -45,10 +45,10 @@ prompt:
     
 
     Old sentence: {old_sentence}
-    Translation A: {A}
-    Translation B: {B}
+    A: {A}
+    B: {B}
 
-    Please read the old sentence text and both translations, then write only the choice A or B.
+    Please read the 'Old sentence' and both translations 'A' and 'B', then write only your choice, no other comments.
 
   system_template_judge: >
      You are an expert Italian linguist and translation evaluator. Your task is to assess a translation of a sentence from another language into Italian. You must assign a score from 1 to 5 for each of the following evaluation criteria. Provide only the requested scores, without explanations or additional commentary.
