--- a/config.yaml
+++ b/config.yaml
@@ -91,7 +91,7 @@ prompt:
 
     Translation: 
     {translation}
-    
+
     Reference Answer (Gold):
     {reference_answer}
 
@@ -114,13 +114,13 @@ prometheus_judge:
     You need to choose the better translation from old Italian sentence into modern Italian between two translations.
 
     ###Response A:
-    {response_a}
+    {A}
 
     ###Response B:
-    {response_b}
+    {B}
 
     ###Reference Answer (Gold):
-    {reference_answer}
+    {gold}
 
     ###Score Rubric:
     Is the translation faithful to the original meaning, grammatically correct, structurally modern, complete, and lexically modernized?
