--- a/config.yaml
+++ b/config.yaml
@@ -47,9 +47,7 @@ prompt:
   system_template_judge: >
      You are an expert Italian linguist and translation evaluator. Your task is to assess a translation of a sentence from old italian into modern Italian. You must assign a score from 1 to 5 for each of the following evaluation criteria. Provide only the requested scores, without explanations or additional commentary.
 
-  user_template_judge: >
-   Evaluate the translation using these five criteria:
-   
+  user_template_judge:
    Meaning Preservation
     1: Completely diverges in meaning, major misinterpretations or hallucinations
     2: Core ideas are misrepresented or lost, with significant meaning shift
@@ -149,7 +147,50 @@ prometheus_judge:
       {rubric}
 
       ###Feedback: 
-        
+    
+      user_template_judge:
+
+    rubrics: 
+      meaning_preservation: >
+        Evaluate the Meaning Preservation according to the following scores:
+        1: Completely diverges in meaning, major misinterpretations or hallucinations
+        2: Core ideas are misrepresented or lost, with significant meaning shift
+        3: Mostly correct meaning, but with noticeable errors (minor shifts or omissions)
+        4: Meaning is preserved with minor discrepancies or nuances lost
+        5: Fully faithful to the original meaning
+
+      Grammar: >
+        Evaluate the grammar according to the following scores:
+        1: Barely readable or nonsensical
+        2: Grammatically flawed throughout, affecting understanding
+        3: Minor grammatical or syntactic errors, but understandable
+        4: Fluent, with native-like grammar and syntax, but minor oddities
+        5: Perfectly fluent and natural in the target Language
+
+      Modern Structural Effectiveness: >
+        Evaluate the modern structural effectiveness according to the following scores:
+        1: Structure is archaic or rigid, hard to follow; mimics original in a way that hinders readability.
+        2: Structure is awkward or overly literal; noticeably unnatural for modern Italian.
+        3: Mixed structure; understandable but includes dated or clumsy phrasing.
+        4: Mostly fluent and modern structure; minor awkwardness or stiffness remains.
+        5: Fully natural and idiomatic structure; clear, fluent, and appropriate for contemporary Italian.
+
+      Completeness: > 
+        Evaluate the completeness according to the following scores:
+        1: Large parts missing or major hallucinated content
+        2: Multiple omissions or additions altering meaning
+        3: Minor omissions or additions that don’t significantly alter meaning
+        4: Nearly complete with only slight trimming
+        5: Fully complete with no omissions or additions
+
+      Lexical Modernization: >
+        Evaluate the lexical modernization according to the following scores:
+        1: No modernization; reads like the original.
+        2: Mostly archaic or unnatural word choices.
+        3: Mixture of modern and archaic.
+        4: Slightly dated or formal, but still acceptable in modern Italian.
+        5: Modern terms feel natural, idiomatic, and true to current Italian usage.
+          
 data:
   input_file: "data/dataset_cleaned.csv"
 
